- More internal work (esp. fixes) with style templates

Reggie, 24.11.1998:
-------------------
- More work on updating/applying style templates. It works quite well now.
- Some fixes in calculation of the chapter numbers, lists, etc.
- Enumerated lists and Bullet lists can be easily used using the toolbar now.

Reggie, 25.11.1998:
-------------------
- Style Templates are saved and loaded now
- Initialization of the GUI work correctly now
- New Style Templates can be added

Reggie, 26.11.1998:
-------------------
- Adding new style templates works correctly now
- Removing style templates works now
- Setting the numbering stuff for paragraphs works correctly now

Reggie, 27.11.1998:
-------------------
- Lots of fixes
- Did some speed improvments - it's noticeable faster now :-)

Reggie, 28.11.1998:
-------------------
- Lots of fixes again
- Fixed some memory leak producing code (which made KWord really slow too)
- Much more speed improvements
- Improved "Blocksatz" - it doesn't wobble anymore :-)
- Fixes with scrolling/redraw

Reggie, 29.11.1998:
-------------------
- Fixes
- Return/Enter should be faster now

Reggie, 30.11.1998:
-------------------
- Scrolling works fine again
- Lots of fixes again

Reggie, 1.12.1998:
------------------
- More speed improvements
- Selecting text is faster too now (There are still problems when selecting text with the mouse 
  and scrolling - selcting text with keyboard + scrolling works quite fine)
- Small fixes again

Reggie, 2.12.1998:
------------------
- Fixes with style templates
- Fixes and improvements with numbering/lists (now even roman numbers can be used for numbering/lists :-)
- New Icons
- Keyboard shurtcuts in the menus

Reggie, 3.12.1998:
------------------
- Fix with following parag layouts, format updating, etc.
- Fix with placing cursor with the mouse
- If multiple underlined words are written the spaces between are underlined too now